# ppc-to-llvm

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh  build_make.sh  build_xcode.sh  gen_make.sh  test_make.sh  tests_xcode.sh
PPCtoLLVM.xcodeproj/: project.pbxproj
PPCtoLLVM.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PPCtoLLVM.xcodeproj/xcshareddata/xcschemes/: all-tests.xcscheme  compilation-tests.xcscheme  empty.xcscheme  simple.xcscheme  tests.xcscheme
compilation-tests/: Makefile  simple.s
include/ppc-to-llvm/: address.h  disassemble.h  disassembly.h  files.h  ppc-to-llvm.h  state.h  translate.h  translation.h
src/: disassemble.cpp  files.cpp  op.cpp  op.h  ops.h  translate.cpp
tests/: CMakeLists.txt  Makefile  arch.h  correctness.cpp  data.cpp  data.h  files.cpp  jit.cpp  main.cpp  runtime.cpp  state.h  tests.cpp  tests.h  translate.cpp  translation.cpp
tests/data/: Makefile  blr.ll  li-state.txt  li.s
tests/data/compilation/: Makefile
tests/data/correctness/: Makefile
tests/data/translation/: Makefile  blr.ll
translate/: main.cpp
translation/: CMakeLists.txt  disassemble.cpp  disassembly.cpp  translate.cpp  translation.cpp
translation/include/: translation.h
translation/src/: disassembly.cpp  disassembly.h  translation.cpp
